@@ -30,6 +30,7 @@
 ## Technical
 ##
 
+- Hardware management: Switched matching ADL device with OpenCL device by using PCI bus, device and function
 - Hardware management: Switched matching NVML device with OpenCL device by using PCI bus, device and function
 - Hardware management: Switched matching NvAPI device with OpenCL device by using PCI bus, device and function
 - Hardware management: Switched matching xnvctrl device with OpenCL device by using PCI bus, device and function
